@@ -19,6 +19,10 @@ the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 MA 02111-1307, USA.
 
 
+2001-10-09  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/alpha/ev6/mul_1.asm: New file.
+
 2001-10-08  Kevin Ryde  <kevin@swox.se>
 
 	* configure.in (with_tags): Establish a default based on --enable-cxx.
